--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2019-04-16 Søren Højsgaard <sorenh@math.aau.dk>
 
+	* Changes to description file requested
+
+	* Version 0.4-3.1 uploaded		
+
+	
+
+2019-04-16 Søren Højsgaard <sorenh@math.aau.dk>
+
 	* The package was removed from CRAN; new version created to get
 	package back on CRAN again
 
